# lib/units/api/controllers/testing.js
@@ -23,6 +23,10 @@ module.exports = {
 function getTestingList(req, res) {
   var status = req.swagger.params.status.value
   var fields = req.swagger.params.fields.value
+  var start_time = req.body.start_time
+  var end_time = req.body.end_time
+  var test_type = req.body.test_type
+
   dbapi.loadTestingList(status)
     .then(function(cursor) {
       return Promise.promisify(cursor.toArray, cursor)()
